--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
     "extra": {
         "branch-alias": {
             "dev-master": "1.0.x-dev"
-        }
+        },
+        "applied-flow-migrations": [
+            "TYPO3.FLOW3-201209201112"
+        ]
     }
 }
