TASK: Mark as compatible to Flow 4.x (only)

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "description": "A plugin for neos/redirecthandler to store redirects in the database",
     "license": "MIT",
     "require": {
-        "neos/redirecthandler": "~2.0 || dev-master"
+        "neos/redirecthandler": "~2.0 || dev-master",
+        "neos/flow": "^4.0"
     },
     "provide": {
         "neos/redirecthandler-storageimplementation": "2.0"
