--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "require": {
         "neos/redirecthandler": "~3.0 || dev-master",
-        "neos/flow": "^5.0"
+        "neos/flow": "~5.0 || ~6.0"
     },
     "provide": {
         "neos/redirecthandler-storageimplementation": "3.0"
