--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,9 +15,10 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Prepare Flow distribution
-      run: export FLOW_TARGET_VERSION=6.2
     - run: cd ..
     - run: git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION}
+      env:     
+        FLOW_TARGET_VERSION: 6.2
     - run: cd flow-base-distribution
     - run: composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
     - run: composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
