--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   build:
+    env:     
+      FLOW_TARGET_VERSION: 6.2
+      FLOW_FOLDER: flow-base-distribution
 
     runs-on: ubuntu-latest
 
@@ -15,22 +18,16 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Prepare Flow distribution
-      run: cd ..
-    - run: git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION}
-      env:     
-        FLOW_TARGET_VERSION: 6.2
-    - run: cd flow-base-distribution
-    - run: composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
-    - run: composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
+      run: git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION}
+    - run: cd ${FLOW_FOLDER} && composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
+    - run: cd ${FLOW_FOLDER} && composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
 
     - name: Install packages
-      run: composer install --no-interaction
-    - run: cd ..
-    - run: rm -rf flow-base-distribution/Packages/Application/Neos.RedirectHandler.DatabaseStorage
-    - run: mv redirecthandler-databasestorage flow-base-distribution/Packages/Application/Neos.RedirectHandler.DatabaseStorage
-    - run: cd flow-base-distribution
+      run: cd ${FLOW_FOLDER} && composer install --no-interaction
+    - run: rm -rf ${FLOW_FOLDER}/Packages/Application/Neos.RedirectHandler.DatabaseStorage
+    - run: mv redirecthandler-databasestorage ${FLOW_FOLDER}/Packages/Application/Neos.RedirectHandler.DatabaseStorage
 
     - name: Run Unit tests
-      run: bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Unit
+      run: cd ${FLOW_FOLDER} && bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Unit
     - name: Run Functional tests
-      run: bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/FunctionalTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Functional/*
+      run: cd ${FLOW_FOLDER} && bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/FunctionalTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Functional/*
