--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     env:     
       FLOW_TARGET_VERSION: 6.2
-      FLOW_FOLDER: flow-base-distribution
+      FLOW_FOLDER: ../flow-base-distribution
 
     runs-on: ubuntu-latest
 
@@ -18,16 +18,22 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Prepare Flow distribution
-      run: git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION}
-    - run: cd ${FLOW_FOLDER} && composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
-    - run: cd ${FLOW_FOLDER} && composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
+      run: |
+        pwd
+        git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION} ${FLOW_FOLDER}
+        cd ${FLOW_FOLDER} 
+        composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
+        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
 
     - name: Install packages
-      run: cd ${FLOW_FOLDER} && composer install --no-interaction
-    - run: rm -rf ${FLOW_FOLDER}/Packages/Application/Neos.RedirectHandler.DatabaseStorage
-    - run: mv redirecthandler-databasestorage ${FLOW_FOLDER}/Packages/Application/Neos.RedirectHandler.DatabaseStorage
+      run: |
+        cd ${FLOW_FOLDER} 
+        composer install --no-interaction
+        rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
+        mv ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
 
     - name: Run Unit tests
       run: cd ${FLOW_FOLDER} && bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Unit
+      
     - name: Run Functional tests
       run: cd ${FLOW_FOLDER} && bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/FunctionalTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Functional/*
