--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,12 +47,12 @@ jobs:
         composer install --no-interaction --no-progress
         rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
         mv ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
+        
+    - name: Verify
+      run: pwd
 
     - name: Run Unit tests
-      run: | 
-        cd ${GITHUB_WORKSPACE}/${FLOW_FOLDER}
-        pwd
-        bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Unit
+      run: bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/UnitTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Unit
       
     - name: Run Functional tests
       run: bin/phpunit --colors -c Build/BuildEssentials/PhpUnit/FunctionalTests.xml Packages/Application/Neos.RedirectHandler.DatabaseStorage/Tests/Functional
