--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,17 @@
             "Neos.Flow-20161124224015",
             "Neos.Eel-20161124230101",
             "Neos.Kickstart-20161124230102",
-            "Neos.Kickstarter-20161125110814"
+            "Neos.Kickstarter-20161125110814",
+            "Neos.Flow-20161125124112",
+            "Neos.Flow-20170125103800",
+            "Neos.Flow-20170127183102",
+            "Neos.Flow-20180415105700",
+            "Neos.Flow-20190425144900",
+            "Neos.Flow-20190515215000",
+            "Neos.Flow-20200813181400",
+            "Neos.Flow-20201003165200",
+            "Neos.Flow-20201109224100",
+            "Neos.Flow-20201205172733"
         ]
     }
 }
