--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     env:     
-      FLOW_TARGET_VERSION: 6.2
+      FLOW_TARGET_VERSION: 7.0
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
 
@@ -39,8 +39,7 @@ jobs:
       run: |
         git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION} ${FLOW_FOLDER}
         cd ${FLOW_FOLDER} 
-        composer require --no-update --no-interaction neos/redirecthandler:4.0.x-dev
-        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-master
+        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-main
 
     - name: Install distribution
       run: |
