--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     env:     
-      FLOW_TARGET_VERSION: 7.0.x-dev
+      FLOW_TARGET_VERSION: 7.0
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
 
@@ -37,7 +37,7 @@ jobs:
 
     - name: Prepare Flow distribution
       run: |
-        git clone https://github.com/neos/flow-base-distribution.git -b ${FLOW_TARGET_VERSION} ${FLOW_FOLDER}
+        git clone https://github.com/neos/flow-base-distribution.git -b "${FLOW_TARGET_VERSION}" "${FLOW_FOLDER}"
         cd ${FLOW_FOLDER} 
         composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-main
 
