--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     env:     
-      FLOW_TARGET_VERSION: "7.0"
+      FLOW_TARGET_VERSION: "8.3"
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
 
@@ -39,7 +39,7 @@ jobs:
       run: |
         git clone https://github.com/neos/flow-base-distribution.git -b "${FLOW_TARGET_VERSION}" "${FLOW_FOLDER}"
         cd ${FLOW_FOLDER} 
-        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:dev-main
+        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:"dev-build as dev-${PACKAGE_TARGET_VERSION}"
 
     - name: Install distribution
       run: |
