--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [ main ]
   pull_request:
-    branches: [ main, "5.0" ]
+    branches: [ main, '[0-9]+.[0-9]' ]
 
 jobs:
   build:
