--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,14 +12,11 @@ jobs:
       FLOW_TARGET_VERSION: "8.3"
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
-      PACKAGE_FOLDER: redirect-databasestorage
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-      with:
-        path: ${{ env.PACKAGE_FOLDER }}
 
     - name: Set package branch name
       run: echo "PACKAGE_TARGET_VERSION=${GITHUB_BASE_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_ENV
@@ -48,16 +45,16 @@ jobs:
         cd ${FLOW_FOLDER} 
         ls -la
         ls -la ..
-#        git -C ../${{ env.PACKAGE_FOLDER }} checkout -b build
-#        composer config repositories.package '{ "type": "path", "url": "../${{ env.PACKAGE_FOLDER }}", "options": { "symlink": false } }'
-#        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:"dev-build as ${PACKAGE_TARGET_VERSION}.x-dev"
+        git -C ../redirecthandler-databasestorage checkout -b build
+        composer config repositories.package '{ "type": "path", "url": "../${{ env.PACKAGE_FOLDER }}", "options": { "symlink": false } }'
+        composer require --no-update --no-interaction neos/redirecthandler-databasestorage:"dev-build as ${PACKAGE_TARGET_VERSION}.x-dev"
 
-    - name: Install distribution
-      run: |
-        cd ${FLOW_FOLDER} 
-        composer install --no-interaction --no-progress
-        rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
-        cp -r ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
+#    - name: Install distribution
+#      run: |
+#        cd ${FLOW_FOLDER}
+#        composer install --no-interaction --no-progress
+#        rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
+#        cp -r ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
 
     - name: Run Unit tests
       run: | 
