--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,10 +49,10 @@ jobs:
         composer config repositories.package '{ "type": "path", "url": "../${{ env.PACKAGE_FOLDER }}", "options": { "symlink": false } }'
         composer require --no-update --no-interaction neos/redirecthandler-databasestorage:"dev-build as ${PACKAGE_TARGET_VERSION}.x-dev"
 
-#    - name: Install distribution
-#      run: |
-#        cd ${FLOW_FOLDER}
-#        composer install --no-interaction --no-progress
+    - name: Install distribution
+      run: |
+        cd ${FLOW_FOLDER}
+        composer install --no-interaction --no-progress
 #        rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
 #        cp -r ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
 
