--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,7 @@ jobs:
       FLOW_TARGET_VERSION: "8.3"
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
+      PACKAGE_FOLDER: redirecthandler-databasestorage
 
     runs-on: ubuntu-latest
 
@@ -44,16 +45,14 @@ jobs:
         git clone https://github.com/neos/flow-base-distribution.git -b "${FLOW_TARGET_VERSION}" "${FLOW_FOLDER}"
         cd ${FLOW_FOLDER} 
         
-        git -C ../redirecthandler-databasestorage checkout -b build
-        composer config repositories.package '{ "type": "path", "url": "../redirecthandler-databasestorage", "options": { "symlink": false } }'
+        git -C ../${{ env.PACKAGE_FOLDER }} checkout -b build
+        composer config repositories.package '{ "type": "path", "url": "../${{ env.PACKAGE_FOLDER }}", "options": { "symlink": false } }'
         composer require --no-update --no-interaction neos/redirecthandler-databasestorage:"dev-build as ${PACKAGE_TARGET_VERSION}.x-dev"
 
     - name: Install distribution
       run: |
         cd ${FLOW_FOLDER}
         composer install --no-interaction --no-progress
-#        rm -rf Packages/Application/Neos.RedirectHandler.DatabaseStorage
-#        cp -r ../redirecthandler-databasestorage Packages/Application/Neos.RedirectHandler.DatabaseStorage
 
     - name: Run Unit tests
       run: | 
