--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     env:     
-      FLOW_TARGET_VERSION: "9.0.x-dev"
+      FLOW_TARGET_VERSION: "9.0"
       FLOW_CONTEXT: Testing
       FLOW_FOLDER: ../flow-base-distribution
       PACKAGE_FOLDER: redirecthandler-databasestorage
